--- a/examples/july22/index.html
+++ b/examples/july22/index.html
@@ -1,7 +1,7 @@
 <!doctype=html>
 <html>
 <head>
-    <title>Template</title>
+    <title>July 2022</title>
     <meta charset="utf-8">
     <script language="JavaScript" src="https://cdnjs.cloudflare.com/ajax/libs/mathjs/7.0.2/math.min.js"></script>
     <script language="JavaScript" src="https://cdnjs.cloudflare.com/ajax/libs/tone/14.8.40/Tone.js"></script>
