--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>Music Box</title>
     <meta charset="utf-8">
     <script language="JavaScript" src="https://cdnjs.cloudflare.com/ajax/libs/mathjs/7.0.2/math.min.js"></script>
-    <script language="JavaScript" src="https://cdnjs.cloudflare.com/ajax/libs/tone/13.8.25/Tone.js"></script>
+    <script language="JavaScript" src="https://cdnjs.cloudflare.com/ajax/libs/tone/14.8.40/Tone.js"></script>
 
 
 </head>
@@ -12,6 +12,7 @@
   <h1>Music Box</h1>
 
   <h2>Compositions</h2>
+  <a href="./examples/july22/index.html">July 2022</a>
 
   <h2>Demos</h2>
   <a href="./examples/template/index.html">Template</a>
